2006-06-14  Kohei Yoshida  <kohei.yoshida@gmail.com>
	
	* source/inc/unoglobal.hxx:
	* source/ui/unoglobal.cxx: added localizable RuntimError class.

	* source/inc/numeric/lpmodel.hxx:
	* source/numeric/lpmodel.cxx: added two new methods that return the number of 
	constraints and decision variables, respectively.  Renamed getEqualityByRowId
	to getEquality for ease of typing.

	* source/numeric/lpsimplex.cxx:
	* source/numeric/lpuno.cxx: affected by renaming of lp::Modell::getEquality().

	* source/numeric/lpsolve.cxx: implemented solve().

	* source/ui/lpbuilder.cxx: disabled stripping of zero constraint rows and 
	columns, since they seem to do more harm than good.

	* source/ui/solvemodel.cxx: switched to LpSolve as the default LP optimizer.

	* util/makefile.mk: added linker flag for linking to lpsolve.

	* workben/addon_pkg/Makefile_build: modified compiler flags, and changed 
	location of liblpsolve55.a.

2006-06-06  Kohei Yoshida  <kohei.yoshida@gmail.com>

	* docs/README.txt: removed old content, added directions for building separate
	UNO packages.

	* source/numeric/lpuno.cxx (UnoAlgorithmImpl::solve): added catch block to
	catch potential RuntimeException coming from UNO algorithm component.

	* workben/external/lpsolve_uno/lpsolve_uno.cxx (LpSolveImpl::solve): fixed
	mis-calculation of model geometry, added exception throwing blocks when 
	a vector is accessed out-of-range (hopefully never happens again), and when
	a solution is not found.

2006-05-30  Kohei Yoshida  <kohei.yoshida@gmail.com>

	* source/inc/numeric/lpsolve.hxx
	* source/numeric/lpsolve.cxx: added new files for lp_solve front-end.

	* source/inc/xcalc.hxx: edited comment for class CalcInterface.

	* source/inc/numeric/lpuno.hxx
	* source/numeric/lpuno.cxx: added implementation.  These files are only used 
	for the separate scsolver UNO package for the time being.

	* source/numeric/makefile.mk: added entry for lpsolve.obj and removed lpuno.obj.
