@@ -62,7 +62,7 @@ void MessageDialog::initialize()
 	const sal_Int16 nBtnWidth = 30, nBtnHeight = 14, nMargin = 3;
 	sal_Int16 nWidth = 120, nHeight = 40;
 
-	BaseDialog::initialize( nWidth, nHeight, ascii( "Message Dialog" ) );
+	BaseDialog::initialize( nWidth, nHeight, ascii_i18n( "Message Dialog" ) );
 
 	sal_Int32 nX, nY;
 	addFixedText( 5, 5, nWidth - 10, 10, ascii( "ftMessage" ), m_sMessage );
