@@ -26,6 +26,7 @@ SHL1STDLIBS= \
 	$(CPPUHELPERLIB) \
 	$(CPPULIB) \
 	$(SALLIB) \
+	$(TOOLSLIB) \
 	$(LPSOLVELIB)
 
 RESLIB1NAME=scsolver
