@@ -1,3 +1,13 @@
+2006-06-13  Michael Meeks  <michael.meeks@novell.com>
+
+	* source/inc/unoglobal.hxx: define ascii_i18n to
+	help markup.
+
+	* source/service/service.cxx (setLocale, getLocale),
+	* source/inc/solver.hxx: impl. XLocalizable
+
+	* source/service/service.cxx (initLocale, getResMgr): impl.
+
 2006-06-14  Kohei Yoshida  <kohei.yoshida@gmail.com>
 	
 	* source/inc/unoglobal.hxx:
